--- a/PhongKham/src/main/resources/database.properties
+++ b/PhongKham/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.showSql=true
 hibernate.connection.driverClass=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/db
+hibernate.connection.url=jdbc:mysql://localhost:3306/saledb
 hibernate.connection.username=root
-hibernate.connection.password=A!23456a
+hibernate.connection.password=12345^Aa
