--- a/PhongKham/pom.xml
+++ b/PhongKham/pom.xml
@@ -66,6 +66,23 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.2.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.3.9</version>
+          </dependency>
+    
+            <dependency>
+              <groupId>javax.mail</groupId>
+              <artifactId>javax.mail-api</artifactId>
+              <version>1.5.5</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>1.4.7</version>
+              </dependency>
+            
     </dependencies>
 
     <build>
