--- a/PhongKham/src/main/resources/database.properties
+++ b/PhongKham/src/main/resources/database.properties
@@ -1,6 +1,7 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.showSql=true
 hibernate.connection.driverClass=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/saledb 
+hibernate.connection.url=jdbc:mysql://localhost:3306/db2
 hibernate.connection.username=root
-hibernate.connection.password=12345^Aa
+hibernate.connection.password=123456
+
