--- a/PhongKham/src/main/resources/database.properties
+++ b/PhongKham/src/main/resources/database.properties
@@ -3,5 +3,5 @@ hibernate.showSql=true
 hibernate.connection.driverClass=com.mysql.cj.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/db2
 hibernate.connection.username=root
-hibernate.connection.password=12345^Aa
+hibernate.connection.password=123456
 
