--- a/PhongKham/pom.xml
+++ b/PhongKham/pom.xml
@@ -57,6 +57,12 @@
             <version>6.1.1.Final</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+        <dependency>
+            
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
             <version>5.2.1.RELEASE</version>
